--- a/project/templates/accounts/signup.html
+++ b/project/templates/accounts/signup.html
@@ -12,7 +12,7 @@
 <body>
     <div class="flex h-screen w-screen justify-center items-center original-gradient">
         <div class="block bg-white rounded-2xl pt-3 pb-3 pr-10 pl-10">
-            <h2 class="font-bold text-3xl font-serif text-center mb-3">Sign up</h2>
+            <h2 class="font-bold text-3xl font-serif text-center mb-3">新規登録</h2>
             <form method="post">
                 {% csrf_token %}
                 {% for field in form %}
