--- a/project/templates/accounts/signup_success.html
+++ b/project/templates/accounts/signup_success.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>sign up</title>
-    {% comment %} <script src="https://cdn.tailwindcss.com"></script> {% endcomment %}
-    {% comment %} <link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.12/dist/full.min.css" rel="stylesheet" type="text/css"/> {% endcomment %}
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.12/dist/full.min.css" rel="stylesheet" type="text/css"/>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">  
 </head>
 <body>
-    <h2 class="text-2xl">登録が完了しました</h2>
-    <h2 style="color:blue"><a href={% url 'accounts:login' %}>ログインはこちら</a></h2>
+    <div class="flex h-screen w-screen justify-center items-center original-gradient">
+        <div class="block">
+            <h2 class="text-5xl">登録が完了しました</h2>
+            <h2 style="color:blue" class="text-center text-2xl"><a href={% url 'accounts:login' %}>ログインはこちら</a></h2>
+        </div>
+    </div>
 </body>
 </html>
