--- a/project/templates/offering/mypage_offering.html
+++ b/project/templates/offering/mypage_offering.html
@@ -4,10 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>DjangoでTailwindCSSを使用する方法</title>
+    <title>{{ company.name }}のマイページ</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.12/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
+    <header>
+        <h1>{{ company.name }}</h1>
+        <img src="{{ company.pic_path.url }}" alt="{{ company.name }}のロゴ">
+    </header>
+
+    <section>
+        <h2>会社概要</h2>
+        <p>住所: {{ company.address }}</p>
+        <p>業種: {{ company.industry }}</p>
+        <p><a href="{{ company.homepage_url }}">ホームページ</a></p>
+        <p>{{ company.description }}</p>
+    </section>
+
+    <footer>
+        <p>&copy; {{ company.name }}</p>
+    </footer>
+
+
 </body>
 </html>
