--- a/project/templates/offering/mypage_offering.html
+++ b/project/templates/offering/mypage_offering.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>{{ company.name }}のマイページ</title>
+    <title>マイページ</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.12/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
     <header>
-        <h1>{{ company.name }}</h1>
-        <img src="{{ company.pic_path.url }}" alt="{{ company.name }}のロゴ">
+        <h1>会社の名前</h1>
+        <img src="https:/localhost" >
     </header>
 
     <section>
         <h2>会社概要</h2>
-        <p>住所: {{ company.address }}</p>
-        <p>業種: {{ company.industry }}</p>
-        <p><a href="{{ company.homepage_url }}">ホームページ</a></p>
-        <p>{{ company.description }}</p>
+        <p>住所: </p>
+        <p>業種: </p>
+        <p>ホームページ</a></p>
+        <p>こん</p>
     </section>
 
     <footer>
-        <p>&copy; {{ company.name }}</p>
+        <p>ああああ</p>
     </footer>
 
 
