--- a/project/templates/senior/list_view_senior.html
+++ b/project/templates/senior/list_view_senior.html
@@ -4,12 +4,193 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>DjangoでTailwindCSSを使用する方法</title>
+    <title>シルバーコネクト｜案件検索</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.12/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">  
   </head>
-  <body>
-    <h2>高齢者ログイン成功</h2>
-    <p style="color: blue"><a href={% url 'accounts:logout' %}>ログアウトする</a></p>
+  <body class="original-gradient font-sans">
+
+      <!-- ヘッダー -->
+      <header class="bg-white text-white">
+        <div class="mx-auto max-w-screen-xl px-4 py-2 sm:px-6 sm:py-4 lg:px-8 border">
+        
+            <div class="sm:flex sm:items-center sm:justify-between">
+            {% load static %}
+            <div class="text-center sm:text-left w-1/6">
+                <img src="{% static 'imgs/logo.png' %}">
+            </div>
+        </div>
+        </header>
+
+      <!-- メインコンテンツ -->
+      <main class="container mx-auto my-8">
+
+          <!-- 案件検索フォーム -->
+          <section class="bg-white p-8 rounded-2xl shadow-md mb-8">
+              <h2 class="text-xl font-bold mb-4">案件を検索</h2>
+              <form action="#" method="GET">
+                  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 justify-center gap-4">
+                      <!-- エリア検索 -->
+                      <div>
+                          <label for="area" class="label-text">都道府県：</label>
+                          <select id="area" name="area" class="select select-bordered w-full max-w-xs">
+                            <option value="" selected>選択なし</option>
+                            <option value="北海道">北海道</option>
+                            <option value="青森県">青森県</option>
+                            <option value="岩手県">岩手県</option>
+                            <option value="宮城県">宮城県</option>
+                            <option value="秋田県">秋田県</option>
+                            <option value="山形県">山形県</option>
+                            <option value="福島県">福島県</option>
+                            <option value="茨城県">茨城県</option>
+                            <option value="栃木県">栃木県</option>
+                            <option value="群馬県">群馬県</option>
+                            <option value="埼玉県">埼玉県</option>
+                            <option value="千葉県">千葉県</option>
+                            <option value="東京都">東京都</option>
+                            <option value="神奈川県">神奈川県</option>
+                            <option value="新潟県">新潟県</option>
+                            <option value="富山県">富山県</option>
+                            <option value="石川県">石川県</option>
+                            <option value="福井県">福井県</option>
+                            <option value="山梨県">山梨県</option>
+                            <option value="長野県">長野県</option>
+                            <option value="岐阜県">岐阜県</option>
+                            <option value="静岡県">静岡県</option>
+                            <option value="愛知県">愛知県</option>
+                            <option value="三重県">三重県</option>
+                            <option value="滋賀県">滋賀県</option>
+                            <option value="京都府">京都府</option>
+                            <option value="大阪府">大阪府</option>
+                            <option value="兵庫県">兵庫県</option>
+                            <option value="奈良県">奈良県</option>
+                            <option value="和歌山県">和歌山県</option>
+                            <option value="鳥取県">鳥取県</option>
+                            <option value="島根県">島根県</option>
+                            <option value="岡山県">岡山県</option>
+                            <option value="広島県">広島県</option>
+                            <option value="山口県">山口県</option>
+                            <option value="徳島県">徳島県</option>
+                            <option value="香川県">香川県</option>
+                            <option value="愛媛県">愛媛県</option>
+                            <option value="高知県">高知県</option>
+                            <option value="福岡県">福岡県</option>
+                            <option value="佐賀県">佐賀県</option>
+                            <option value="長崎県">長崎県</option>
+                            <option value="熊本県">熊本県</option>
+                            <option value="大分県">大分県</option>
+                            <option value="宮崎県">宮崎県</option>
+                            <option value="鹿児島県">鹿児島県</option>
+                            <option value="沖縄県">沖縄県</option>
+                          </select>
+                      </div>
+                      <!-- 業種検索 -->
+                      <div>
+                          <label for="industry" class="label-text">業種：</label>
+                          <select id="industry" name="industry" class="select select-bordered w-full max-w-xs">
+                            <option value="" selected>選択なし</option>
+                            <option value="IT・通信・インターネット">IT・通信・インターネット</option>
+                            <option value="メーカー">メーカー</option>
+                            <option value="商社">商社</option>
+                            <option value="サービス・レジャー">サービス・レジャー</option>
+                            <option value="流通・小売・フード">流通・小売・フード</option>
+                            <option value="ソフトウエア">ソフトウエア</option>
+                            <option value="マスコミ・広告・デザイン">マスコミ・広告・デザイン</option>
+                            <option value="コンサルティング">コンサルティング</option>
+                            <option value="不動産・建設・設備">不動産・建設・設備</option>
+                            <option value="運輸・交通・物流・倉庫">運輸・交通・物流・倉庫</option>
+                            <option value="環境・エネルギー">環境・エネルギー</option>
+                            <option value="公的機関">公的機関</option>
+                          </select>
+                      </div>
+                      <!-- 職種検索 -->
+                      <div>
+                          <label for="occupation" class="label-text">職種：</label>
+                          <select id="occupation" name="occupation" class="select select-bordered w-full max-w-xs">
+                            <option value="" selected>選択なし</option>
+                            <option value="営業">営業</option>
+                            <option value="販売・フード・アミューズメント">販売・フード・アミューズメント</option>
+                            <option value="医療・福祉">医療・福祉</option>
+                            <option value="企画・経営">企画・経営</option>
+                            <option value="建築・土木">建築・土木</option>
+                            <option value="ITエンジニア">ITエンジニア</option>
+                            <option value="電気・電子・機械・半導体">電気・電子・機械・半導体</option>
+                            <option value="医薬・食品・化学・素材">医薬・食品・化学・素材</option>
+                            <option value="コンサルタント・金融・不動産専門職">コンサルタント・金融・不動産専門職</option>
+                            <option value="クリエイティブ">クリエイティブ</option>
+                            <option value="技能工・設備・配送・農林水産">技能工・設備・配送・農林水産</option>
+                            <option value="公共サービス">公共サービス</option>
+                            <option value="管理・事務">管理・事務</option>
+                            <option value="美容・ブライダル・ホテル・交通">美容・ブライダル・ホテル・交通</option>
+                            <option value="保育・教育・通訳">保育・教育・通訳</option>
+                            <option value="WEB・インターネット・ゲーム">WEB・インターネット・ゲーム</option>
+                          </select>
+                      </div>
+                      <!-- キーワード検索 -->
+                      <div>
+                          <label for="keyword" class="label-text">キーワード：</label>
+                          <input type="text" id="keyword" name="keyword" placeholder="ここに入力" class="input input-bordered w-full max-w-xs" />
+                      </div>
+                  </div>
+                  <!-- 検索ボタン -->
+                  <div class="flex justify-center mt-10"">
+                    <a class=""><button type="submit" class="btn btn-primary">検索</button></a>
+                  </div>
+              </form>
+          </section>
+
+          <!-- 検索結果リスト -->
+          <section class="bg-white p-8 rounded-2xl shadow-md">
+  <h2>検索結果 2 人</h2>
+  <!-- 検索結果 -->
+  <div class="container mx-auto mt-8">
+    <h1 class="text-3xl font-bold text-gray-800 mb-6">検索結果</h1>
+
+    <!-- カード形式の検索結果 -->
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+      <div class="bg-white rounded-lg overflow-hidden shadow-md flex">
+        <img src="https://via.placeholder.com/300" alt="求人画像" class="w-1/3 h-40 object-cover">
+        <div class="w-2/3 p-4">
+          <h2 class="text-xl font-bold text-blue-500 mb-2">求人タイトル1</h2>
+          <p class="text-gray-600 mb-2">企業名: 株式会社ABC</p>
+          <p class="text-gray-600 mb-2">勤務地: 東京都</p>
+          <p class="text-gray-600 mb-2">給与: 500,000円/月</p>
+          <p><a href="#" class="text-green-500 font-bold">詳細情報を見る</a></p>
+
+          <!-- 右側のボタン -->
+          <div class="flex justify-end mt-2">
+            <a href="#" class="bg-blue-500 text-white px-4 py-2 rounded-full mr-2">企業ページへ</a>
+            <a href="#" class="bg-yellow-500 text-white px-4 py-2 rounded-full">連絡する</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="bg-white rounded-lg overflow-hidden shadow-md flex">
+        <img src="https://via.placeholder.com/300" alt="求人画像" class="w-1/3 h-40 object-cover">
+        <div class="w-2/3 p-4">
+          <h2 class="text-xl font-bold text-blue-500 mb-2">求人タイトル2</h2>
+          <p class="text-gray-600 mb-2">企業名: 株式会社XYZ</p>
+          <p class="text-gray-600 mb-2">勤務地: 大阪府</p>
+          <p class="text-gray-600 mb-2">給与: 600,000円/月</p>
+          <p><a href="#" class="text-green-500 font-bold">詳細情報を見る</a></p>
+
+          <!-- 右側のボタン -->
+          <div class="flex justify-end mt-2">
+            <a href="#" class="bg-blue-500 text-white px-4 py-2 rounded-full mr-2">企業ページへ</a>
+            <a href="#" class="bg-yellow-500 text-white px-4 py-2 rounded-full">連絡する</a>
+          </div>
+        </div>
+      </div>
+          </section>
+      </main>
+
+      <!-- フッター -->
+      <footer class="bg-white text-white text-center py-4">
+          <p>&copy; 2023 老人向け就活サービス</p>
+          <p style="color: blue"><a href={% url 'accounts:logout' %}>ログアウトする</a></p>
+      </footer>
   </body>
 </html>
+
