test_modelcreate_modelshow

--- a/project/templates/accounts/login.html
+++ b/project/templates/accounts/login.html
@@ -8,6 +8,8 @@
         <link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.12/dist/full.min.css" rel="stylesheet" type="text/css"/>
         {% load static %}
         <link rel="stylesheet" href="{% static 'css/login.css' %}">  
+        {% load static %}
+        <link rel="icon" type="image/png" href="{% static 'images/icon.png' %}">
 </head>
     <body>
         <div class="flex h-screen w-screen justify-center items-center original-gradient">
@@ -43,5 +45,6 @@
                 {%endif%}
             </div>
         </div>
+        <img src="{% static 'images/icon.png'%}" alt="Favicon">
     </body>
 </html>
