--- a/project/templates/test/model_update.html
+++ b/project/templates/test/model_update.html
@@ -13,7 +13,19 @@
     {% load static %}
     <link rel="icon" type="image/png" href="{% static 'images/icon.png' %}">
   </head>
-  <body class="original-gradient">
-    <h2>index.htmlだよ</h2>
+  <body class="h-screen w-screen original-gradient">
+    <form method="post">
+        {% csrf_token %}
+        {% for field in form %}
+            <div>
+                <label class="text-lg" for="Username">{{ field.label }}:</label><br>
+                <input class="input input-bordered w-full max-w-xs mb-3" type="{{field.widget_type}}" name="{{field.name}}" maxlength="150" autofocus="" required="" id="{{ field.id_for_label}}" value="">
+            <div>
+            {% for error in field.errors %}
+                <p style="color: red">{{ error }}</p>
+            {%endfor%}
+        {% endfor %}
+        <input class="btn btn-outline" type="submit" value="更新">    
+    </form>
   </body>
 </html>
