--- a/project/templates/senior/list_view_senior.html
+++ b/project/templates/senior/list_view_senior.html
@@ -134,7 +134,7 @@
             </div>
           </div>
           <!-- 検索ボタン -->
-          <div class="flex justify-center mt-10"">
+          <div class="flex justify-center mt-10">
             <a class=""><button type="submit" class="btn btn-primary">検索</button></a>
           </div>
         </form>
