--- a/project/templates/offering/list_view_offering.html
+++ b/project/templates/offering/list_view_offering.html
@@ -1,15 +1,282 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <title>DjangoでTailwindCSSを使用する方法</title>
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.12/dist/full.min.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <title>高齢者検索画面</title>
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.12/dist/full.min.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
+<!-- ヘッダ -->
+<header>
+  <div class="mx-auto max-w-screen-xl px-4 py-2 sm:px-6 sm:py-4 lg:px-8 border">
+
+    <div class="sm:flex sm:items-center sm:justify-between">
+      {% load static %}
+      <div class="text-center sm:text-left w-1/6">
+        <img src="{% static 'imgs/logo.png' %}">
+      </div>
+
+      <div class="mt-4 flex flex-col gap-4 sm:mt-0 sm:flex-row sm:items-center">
+        <button
+          class="block rounded-lg bg-indigo-600 px-5 py-3 text-sm font-medium text-white transition hover:bg-indigo-700 focus:outline-none focus:ring"
+          type="button">
+          ログイン
+        </button>
+      </div>
+    </div>
+  </div>
+</header>
+
+
 <body>
-    <h2>募集側ログイン成功</h2>
-    <p style="color: blue"><a href={% url 'accounts:logout' %}>ログアウトする</a></p>
-</body> 
+  <section class="bg-white p-8 rounded-2xl shadow-md mb-8">
+    <h2 class="text-xl font-bold mb-4">高齢者人材を検索</h2>
+    <form action="#" method="GET">
+      <div class="flex gap-10">
+        <!-- キーワード検索 -->
+        <div>
+          <label for="keyword" class="label-text">キーワード</label>
+          <input type="text" id="keyword" name="keyword" placeholder="ここに入力"
+            class="input input-bordered w-full max-w-xs" />
+        </div>
+        <!-- 年齢検索 -->
+        <div>
+          <label for="age" class="label-text">年齢</label>
+          <input type="text" id="age" name="age" placeholder="歳" class="input input-bordered w-full max-w-xs" />
+        </div>
+        <!-- 性別 -->
+        <div>
+          <label for="sex" class="label-text">性別</label>
+          <select id="sex" name="sex" class="select select-bordered w-full max-w-xs">
+            <option value="man" selected>男性</option>
+            <option value="female">女性</option>
+            <option value="other">その他</option>
+          </select>
+        </div>
+        <!-- エリア検索 -->
+        <div>
+          <label for="area" class="label-text">エリア</label>
+          <select id="area" name="area" class="select select-bordered w-full max-w-xs">
+            <option value="" selected>選択なし</option>
+            <option value="北海道">北海道</option>
+            <option value="青森県">青森県</option>
+            <option value="岩手県">岩手県</option>
+            <option value="宮城県">宮城県</option>
+            <option value="秋田県">秋田県</option>
+            <option value="山形県">山形県</option>
+            <option value="福島県">福島県</option>
+            <option value="茨城県">茨城県</option>
+            <option value="栃木県">栃木県</option>
+            <option value="群馬県">群馬県</option>
+            <option value="埼玉県">埼玉県</option>
+            <option value="千葉県">千葉県</option>
+            <option value="東京都">東京都</option>
+            <option value="神奈川県">神奈川県</option>
+            <option value="新潟県">新潟県</option>
+            <option value="富山県">富山県</option>
+            <option value="石川県">石川県</option>
+            <option value="福井県">福井県</option>
+            <option value="山梨県">山梨県</option>
+            <option value="長野県">長野県</option>
+            <option value="岐阜県">岐阜県</option>
+            <option value="静岡県">静岡県</option>
+            <option value="愛知県">愛知県</option>
+            <option value="三重県">三重県</option>
+            <option value="滋賀県">滋賀県</option>
+            <option value="京都府">京都府</option>
+            <option value="大阪府">大阪府</option>
+            <option value="兵庫県">兵庫県</option>
+            <option value="奈良県">奈良県</option>
+            <option value="和歌山県">和歌山県</option>
+            <option value="鳥取県">鳥取県</option>
+            <option value="島根県">島根県</option>
+            <option value="岡山県">岡山県</option>
+            <option value="広島県">広島県</option>
+            <option value="山口県">山口県</option>
+            <option value="徳島県">徳島県</option>
+            <option value="香川県">香川県</option>
+            <option value="愛媛県">愛媛県</option>
+            <option value="高知県">高知県</option>
+            <option value="福岡県">福岡県</option>
+            <option value="佐賀県">佐賀県</option>
+            <option value="長崎県">長崎県</option>
+            <option value="熊本県">熊本県</option>
+            <option value="大分県">大分県</option>
+            <option value="宮崎県">宮崎県</option>
+            <option value="鹿児島県">鹿児島県</option>
+            <option value="沖縄県">沖縄県</option>
+          </select>
+        </div>
+        <!-- 業種検索 -->
+        <div>
+          <label for="industry" class="label-text">業種</label>
+          <select id="industry" name="industry" class="select select-bordered w-full max-w-xs">
+            <option value="" selected>選択なし</option>
+            <option value="IT・通信・インターネット">IT・通信・インターネット</option>
+            <option value="メーカー">メーカー</option>
+            <option value="商社">商社</option>
+            <option value="サービス・レジャー">サービス・レジャー</option>
+            <option value="流通・小売・フード">流通・小売・フード</option>
+            <option value="ソフトウエア">ソフトウエア</option>
+            <option value="マスコミ・広告・デザイン">マスコミ・広告・デザイン</option>
+            <option value="コンサルティング">コンサルティング</option>
+            <option value="不動産・建設・設備">不動産・建設・設備</option>
+            <option value="運輸・交通・物流・倉庫">運輸・交通・物流・倉庫</option>
+            <option value="環境・エネルギー">環境・エネルギー</option>
+            <option value="公的機関">公的機関</option>
+          </select>
+        </div>
+        <!-- 職種検索 -->
+        <div>
+          <label for="occupation" class="label-text">職種</label>
+          <select id="occupation" name="occupation" class="select select-bordered w-full max-w-xs">
+            <option value="" selected>選択なし</option>
+            <option value="営業">営業</option>
+            <option value="販売・フード・アミューズメント">販売・フード・アミューズメント</option>
+            <option value="医療・福祉">医療・福祉</option>
+            <option value="企画・経営">企画・経営</option>
+            <option value="建築・土木">建築・土木</option>
+            <option value="ITエンジニア">ITエンジニア</option>
+            <option value="電気・電子・機械・半導体">電気・電子・機械・半導体</option>
+            <option value="医薬・食品・化学・素材">医薬・食品・化学・素材</option>
+            <option value="コンサルタント・金融・不動産専門職">コンサルタント・金融・不動産専門職</option>
+            <option value="クリエイティブ">クリエイティブ</option>
+            <option value="技能工・設備・配送・農林水産">技能工・設備・配送・農林水産</option>
+            <option value="公共サービス">公共サービス</option>
+            <option value="管理・事務">管理・事務</option>
+            <option value="美容・ブライダル・ホテル・交通">美容・ブライダル・ホテル・交通</option>
+            <option value="保育・教育・通訳">保育・教育・通訳</option>
+            <option value="WEB・インターネット・ゲーム">WEB・インターネット・ゲーム</option>
+          </select>
+        </div>
+      </div>
+      <!-- 検索ボタン -->
+      <div class="flex justify-center mt-10">
+        <button type=" submit" class="btn btn-success">検索</button>
+      </div>
+    </form>
+  </section>
+
+  <!-- 旧検索 -->
+
+  <!-- <div class="grid grid-cols-1">
+    <form class="max-w-xl mx-auto px-0">
+      <label for="search-icon" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your
+        Email</label> -->
+  <!-- Keywords -->
+  <!-- <div class="relative">
+    <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
+      <svg version="1.1" id="_x32_" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+        x="0px" y="0px" width="512px" height="512px" viewBox="0 0 512 512"
+        style="width: 16px; height: 16px; opacity: 1;" xml:space="preserve">
+        <style type="text/css">
+          .st0 {
+            fill: #4B4B4B;
+          }
+        </style>
+        <g>
+          <path class="st0"
+            d="M449.803,62.197C408.443,20.807,353.85-0.037,299.646-0.006C245.428-0.037,190.85,20.807,149.49,62.197
+                            C108.1,103.557,87.24,158.15,87.303,212.338c-0.047,37.859,10.359,75.766,30.547,109.359L15.021,424.525
+                            c-20.016,20.016-20.016,52.453,0,72.469c20,20.016,52.453,20.016,72.453,0L190.318,394.15
+                            c33.578,20.203,71.5,30.594,109.328,30.547c54.203,0.047,108.797-20.797,150.156-62.188
+                            c41.375-41.359,62.234-95.938,62.188-150.172C512.053,158.15,491.178,103.557,449.803,62.197z M391.818,304.541
+                            c-25.547,25.531-58.672,38.125-92.172,38.188c-33.5-0.063-66.609-12.656-92.188-38.188c-25.531-25.578-38.125-58.688-38.188-92.203
+                            c0.063-33.484,12.656-66.609,38.188-92.172c25.578-25.531,58.688-38.125,92.188-38.188c33.5,0.063,66.625,12.656,92.188,38.188
+                            c25.531,25.563,38.125,58.688,38.188,92.172C429.959,245.854,417.365,278.963,391.818,304.541z"
+            style="fill: rgb(75, 75, 75);"></path>
+        </g>
+      </svg>
+
+    </div>
+    <input type="text" id="search-icon"
+      class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+      placeholder="キーワードから検索">
+  </div> -->
+
+  <!-- Age -->
+  <!-- <div class="col-span-6 sm:col-span-3 py-3">
+    <label for="Age" class="block text-sm font-medium text-gray-700">
+      年齢
+    </label>
+
+    <input type="text" id="Age" name="age"
+      class="mt-1 w-full rounded-md border-gray-200 bg-white text-sm text-gray-700 shadow-sm" />
+    </label>
+  </div> -->
+
+
+  <!-- Sex -->
+  <!-- <div class="mb-4">
+    <label for="gender" class="block text-sm font-medium text-gray-600">性別</label>
+    <select id="gender" name="gender" class="mt-1 p-2 block w-full border border-gray-300 rounded-md">
+      <option value="male">男性</option>
+      <option value="female">女性</option>
+      <option value="other">その他</option>
+    </select>
+  </div> -->
+
+  <!-- 検索ボタン -->
+  <!-- <div class="flex flex-col sm:items-center">
+    <button
+      class="block rounded-lg bg-indigo-600 px-5 py-3 text-sm font-medium text-white transition hover:bg-indigo-700 focus:outline-none focus:ring"
+      type="button">
+      この条件で検索
+    </button>
+  </div>
+  </div>  -->
+
+  <!-- <h2>検索結果 2 人</h2> -->
+  <!-- 検索結果 -->
+  <div class="container mx-auto mt-8">
+    <h1 class="text-3xl font-bold text-gray-800 mb-6">検索結果</h1>
+
+    <!-- カード形式の検索結果 -->
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+      <div class="bg-white rounded-lg overflow-hidden shadow-md flex">
+        <img src="https://via.placeholder.com/300" alt="求人画像" class="w-1/3 h-40 object-cover">
+        <div class="w-2/3 p-4">
+          <h2 class="text-xl font-bold text-blue-500 mb-2">山森 直太朗</h2>
+          <p class="text-gray-600 mb-2">年齢: 62 歳</p>
+          <p class="text-gray-600 mb-2">性別: 男性</p>
+          <p class="text-gray-600 mb-2">エリア: 東京都</p>
+          <p class="text-gray-600 mb-2">業種: メーカー</p>
+          <p><a href="#" class="text-green-500 font-bold">詳細情報を見る</a></p>
+
+          <!-- 右側のボタン -->
+          <div class="flex justify-end mt-2">
+            <a href="#" class="bg-blue-500 text-white px-4 py-2 rounded-full mr-2">個人ページへ</a>
+            <a href="#" class="bg-yellow-500 text-white px-4 py-2 rounded-full">連絡する</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="bg-white rounded-lg overflow-hidden shadow-md flex">
+        <img src="https://via.placeholder.com/300" alt="求人画像" class="w-1/3 h-40 object-cover">
+        <div class="w-2/3 p-4">
+          <h2 class="text-xl font-bold text-blue-500 mb-2">山森 直太朗</h2>
+          <p class="text-gray-600 mb-2">年齢: 62 歳</p>
+          <p class="text-gray-600 mb-2">性別: 男性</p>
+          <p class="text-gray-600 mb-2">エリア: 東京都</p>
+          <p class="text-gray-600 mb-2">業種: メーカー</p>
+          <p><a href="#" class="text-green-500 font-bold">詳細情報を見る</a></p>
+
+          <!-- 右側のボタン -->
+          <div class="flex justify-end mt-2">
+            <a href="#" class="bg-blue-500 text-white px-4 py-2 rounded-full mr-2">個人ページへ</a>
+            <a href="#" class="bg-yellow-500 text-white px-4 py-2 rounded-full">連絡する</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- 他の検索結果も同様に表示 -->
+
+    </div>
+  </div>
+
+</body>
+
 </html>
