--- a/project/templates/senior/list_view_senior.html
+++ b/project/templates/senior/list_view_senior.html
@@ -35,7 +35,7 @@
             <div>
               <label for="area" class="label-text">都道府県：</label>
               <select id="area" name="area" class="select select-bordered w-full max-w-xs">
-                <option value="" selected>選択なし</option>
+                <option value="選択なし" selected>選択なし</option>
                 <option value="北海道">北海道</option>
                 <option value="青森県">青森県</option>
                 <option value="岩手県">岩手県</option>
@@ -89,7 +89,7 @@
             <div>
               <label for="industry" class="label-text">業種：</label>
               <select id="industry" name="industry" class="select select-bordered w-full max-w-xs">
-                <option value="" selected>選択なし</option>
+                <option value="選択なし" selected>選択なし</option>
                 <option value="IT・通信・インターネット">IT・通信・インターネット</option>
                 <option value="メーカー">メーカー</option>
                 <option value="商社">商社</option>
@@ -108,7 +108,7 @@
             <div>
               <label for="occupation" class="label-text">職種：</label>
               <select id="occupation" name="occupation" class="select select-bordered w-full max-w-xs">
-                <option value="" selected>選択なし</option>
+                <option value="選択なし" selected>選択なし</option>
                 <option value="営業">営業</option>
                 <option value="販売・フード・アミューズメント">販売・フード・アミューズメント</option>
                 <option value="医療・福祉">医療・福祉</option>
@@ -148,21 +148,21 @@
         <!-- カード形式の検索結果 -->
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
           {% for job in object_list %}
-          <div class="bg-white rounded-lg overflow-hidden shadow-md flex">
-            <img src="https://via.placeholder.com/300" alt="求人画像" class="w-1/3 h-40 object-cover">
-            <div class="w-2/3 p-4">
-              <h2 class="text-xl font-bold text-blue-500 mb-2">求人タイトル1</h2>
+            <div class="bg-white rounded-lg overflow-hidden shadow-md flex">
+              <img src="https://via.placeholder.com/300" alt="求人画像" class="w-1/3 h-40 object-cover">
+              <div class="w-2/3 p-4">
+                <h2 class="text-xl font-bold text-blue-500 mb-2">求人タイトル1</h2>
               <p class="text-gray-600 mb-2">企業名: {{ job.company.name }}</p>
               <p class="text-gray-600 mb-2">勤務地: {{ job.prefecture }}</p>
               <p class="text-gray-600 mb-2">給与: {{ job.saraly }}</p>
-              <p><a href="#" class="text-green-500 font-bold">詳細情報を見る</a></p>
-              <!-- 右側のボタン -->
-              <div class="flex justify-end mt-2">
-                <a href="#" class="bg-blue-500 text-white px-4 py-2 rounded-full mr-2">企業ページへ</a>
-                <a href="#" class="bg-yellow-500 text-white px-4 py-2 rounded-full">連絡する</a>
+                <p><a href="#" class="text-green-500 font-bold">詳細情報を見る</a></p>
+                <!-- 右側のボタン -->
+                <div class="flex justify-end mt-2">
+                  <a href="#" class="bg-blue-500 text-white px-4 py-2 rounded-full mr-2">企業ページへ</a>
+                  <a href="#" class="bg-yellow-500 text-white px-4 py-2 rounded-full">連絡する</a>
+                </div>
               </div>
             </div>
-          </div>
           {% endfor %}
         </div>
       </section>
