--- a/project/templates/senior/mypage_senior.html
+++ b/project/templates/senior/mypage_senior.html
@@ -32,7 +32,7 @@
 
     <div class="container mx-auto mt-8 flex flex-wrap justify-center">
         <!-- 上部のカード - プロフィール画像と個人情報 -->
-        <div class="sm:w-3/4 md:w-3/4 lg:w-3/4 bg-white rounded-lg overflow-hidden shadow-lg mb-8">
+        <div class="sm:w-4/5 md:w-4/5 lg:w-4/5 bg-white rounded-lg overflow-hidden shadow-lg mb-8">
             <div class="p-6 flex flex-col sm:flex-row">
                 <div class="w-full sm:w-1/2 mb-4 sm:mb-0">
                     <div class="w-full h-48 md:w-64 md:h-64 rounded-full overflow-hidden border-4 border-gray-100 mx-auto">
@@ -41,10 +41,12 @@
                 </div>
                 <div class="mt-4 text-left">
                     <h2 class="text-5xl font-semibold text-gray-800 mb-4"><i class="fas fa-user"></i>山田 太郎</h2>
-                    <p class="text-3xl text-gray-500 mb-2">年齢: <span class="text-gray-800">70歳</span></p>
-                    <p class="text-3xl text-gray-500 mb-2"><i class="fas fa-mars"></i> 性別: <span class="text-gray-800">男性</span></p>
-                    <p class="text-3xl text-gray-500 mb-2"><i class="fas fa-industry"></i> 業種: <span class="text-gray-800">流通・小売・フード</span></p>
-                    <p class="text-3xl text-gray-500 mb-2"><i class="fas fa-paint-brush"></i> 職種: <span class="text-gray-800">クリエイティブ</span></p>
+                    <p class="text-2xl text-gray-500 mb-2">年齢: <span class="text-3xl text-gray-800">70歳</span></p>
+                    <p class="text-2xl text-gray-500 mb-2"></i> 性別: <span class="text-3xl text-gray-800">男性</span></p>
+                    <p class="text-2xl text-gray-500 mb-2"><i class="fas fa-industry"></i> 業種:</p>
+                    <p class="text-3xl text-gray-800 mb-2 ml-4">流通・小売・フード</p>
+                    <p class="text-2xl text-gray-500 mb-2"><i class="fas fa-paint-brush"></i> 職種:</p>
+                    <p class="text-3xl text-gray-800 mb-2 ml-4">クリエイティブ</p>
                 </div>                
             </div>
         </div>
