--- a/project/templates/offering/list_view_offering.html
+++ b/project/templates/offering/list_view_offering.html
@@ -45,7 +45,7 @@
                 <!-- 年齢検索 -->
                 <div>
                     <label for="age" class="label-text">年齢</label>
-                    <input type="text" id="age" name="age" placeholder="歳"
+                    <input type="text" id="age" name="age" placeholder="歳以下"
                         class="input input-bordered w-full max-w-xs" />
                 </div>
                 <!-- 性別 -->
