you can now view company detail

--- a/project/templates/offering/mypage_offering.html
+++ b/project/templates/offering/mypage_offering.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="w-1/2 pl-8">
                     <div class="mt-4 text-left">
-                        <h2 class="text-5xl font-semibold text-gray-800 mb-4 whitespace-nowrap overflow-ellipsis">山田 太郎</h2>
+                        <h2 class="text-5xl font-semibold text-gray-800 mb-4 whitespace-nowrap overflow-ellipsis">{{ object.name }}</h2>
                         <p class="text-3xl whitespace-nowrap overflow-ellipsis">本社所在</p>
                         <p class="text-2xl whitespace-nowrap overflow-ellipsis">京都府京都市京都町</p>
                         <p class="text-3xl whitespace-nowrap overflow-ellipsis">業種流通・小売・フード</p>
