--- a/project/templates/senior/mypage_senior.html
+++ b/project/templates/senior/mypage_senior.html
@@ -29,7 +29,7 @@
         </div>
     </header>
 
-    <div class="container mx-auto mt-8 flex flex-wrap justify-center">
+    <div class="container mx-auto mt-8 flex flex-wrap justify-center items-center">
         <!-- 上部のカード - プロフィール画像と個人情報 -->
         <div class="sm:w-4/5 md:w-4/5 lg:w-4/5 bg-white rounded-lg overflow-hidden shadow-lg mb-8">
             <div class="p-6 flex flex-col sm:flex-row">
